--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,12 +52,19 @@ jobs:
       - name: run Monaco
         run: | 
            export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
-           cd cloudautomation/monaco
+           cd cloudautomation/monaco/demo/management-zone/
            curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
            chmod +x monaco
            # deploy repo folder
            sudo mv monaco /usr/local/bin/
            monaco --environments=environments.yaml
+           
+           cd cloudautomation/monaco
+           curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
+           chmod +x monaco
+           # deploy repo folder
+           sudo mv monaco /usr/local/bin/
+           monaco --environments=environments.yaml 
             
       
       
