--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,28 @@ jobs:
             }
             DATA
             
+            
+      - name: monaco create env file
+        run: |
+           cd cloudautomation/monaco/demo/management-zone
+           cat << EOF > environments.yaml
+           demo:
+               - name: "management-zone"
+               - env-url: "${{ secrets.DT_URL }}"
+               - env-token-name: "DT_API_TOKEN"    
+               
+    
+      - name: run Monaco
+        run: | 
+           cd cloudautomation/monaco/demo/management-zone
+           curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
+           chmod +x monaco
+           # deploy repo folder
+           sudo mv monaco /usr/local/bin/
+           monaco --environments=environments.yaml 
+           
+           
+            
       - name: monaco create env file
         run: |
            cd cloudautomation/monaco
@@ -51,14 +73,6 @@ jobs:
     
       - name: run Monaco
         run: | 
-           export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
-           cd cloudautomation/monaco/demo/management-zone/
-           curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
-           chmod +x monaco
-           # deploy repo folder
-           sudo mv monaco /usr/local/bin/
-           monaco --environments=environments.yaml
-           
            cd cloudautomation/monaco
            curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
            chmod +x monaco
