--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,6 +52,7 @@ jobs:
     
       - name: run Monaco
         run: | 
+           export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
            cd cloudautomation/monaco/demo/management-zone
            curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
            chmod +x monaco
@@ -73,6 +74,7 @@ jobs:
     
       - name: run Monaco
         run: | 
+           export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
            cd cloudautomation/monaco
            curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
            chmod +x monaco
