--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,21 +45,19 @@ jobs:
            cd cloudautomation/monaco/demo/management-zone
            cat << EOF > environments.yaml
            demo:
-               - name: "management-zone"
+               - name: "demo/management-zone"
                - env-url: "${{ secrets.DT_URL }}"
                - env-token-name: "DT_API_TOKEN"    
                
-    
       - name: run Monaco
         run: | 
            export DT_API_TOKEN=${{ secrets.DT_API_TOKEN }}
-           cd cloudautomation/monaco/demo/management-zone
+           cd cloudautomation/monaco
            curl -L https://github.com/dynatrace-oss/dynatrace-monitoring-as-code/releases/download/v1.7.0/monaco-linux-amd64 -o monaco
            chmod +x monaco
            # deploy repo folder
            sudo mv monaco /usr/local/bin/
-           monaco --environments=environments.yaml 
-           
+           monaco --environments=environments.yaml               
            
             
       - name: monaco create env file
