--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -176,5 +176,14 @@ jobs:
             keptn create service tnt-acer-svc --project=deployment-gates
             keptn add-resource --project=deployment-gates --all-stages --service=tnt-acer-svc --resource=cloudautomation/dynatrace/dynatrace.conf.yaml --resourceUri=dynatrace/dynatrace.conf.yaml 
 
-            
+
+      - name: get dashboard variables
+        run: |
+             echo "Workflow Variables to set"
+             echo "DT_URL=${{ secrets.DT_URL }}""
+             echo "DT_DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc'))| .[0].id')"
+             echo "DT_STAGING_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc'))| .[0].id')"
+             echo "DT_PROD_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=prodg;service=tnt-acer-svc'))| .[0].id')"
+             echo "DT_PRE_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=deployment-gates;stage=production;service=tnt-acer-svc'))| .[0].id')"
+
             
