--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,7 +37,7 @@ jobs:
        outputs:
             output1: ${{ steps.create-issue.outputs.number }}
             output2: ${{ steps.set_ip.outputs.publicip }}
-            DT_DEV_DB_ID: ${{ steps.get_variables.outputs.DT_DEV_DB_ID }}
+            DT_DEV_DB_ID: ${{ steps.get_variables.outputs.dt_dev_db_id }}
 
             
        steps:
@@ -54,7 +54,8 @@ jobs:
          id: get_variables
          run: |
               export DT_DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
-              echo "::set-output name=DT_DEV_DB_ID::$DT_DEV_DB_ID"
+              echo DT_DEV_DB_ID
+              echo "::set-output name=dt_dev_db_id::$DT_DEV_DB_ID"
         
        - name: Create Issue Action
          id: create-issue
