--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -54,7 +54,7 @@ jobs:
          id: get_variables
          run: |
               export DT_DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
-              echo DT_DEV_DB_ID
+              echo $DT_DEV_DB_ID
               echo "::set-output name=dt_dev_db_id::$DT_DEV_DB_ID"
         
        - name: Create Issue Action
