--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,8 +37,8 @@ jobs:
        outputs:
             output1: ${{ steps.create-issue.outputs.number }}
             output2: ${{ steps.set_ip.outputs.publicip }}
-            DT_DEV_DB_ID: ${{ steps.get_variables.outputs.dt_dev_db_id }}
-            DT_MZ_ID: ${{ steps.get_variables.outputs.dt_mz_id}}
+            DT_DEV_DB_ID: ${{ steps.get_variables_db.outputs.dt_dev_db_id }}
+            DT_MZ_ID: ${{ steps.get_variables_mz.outputs.dt_mz_id}}
 
             
        steps:
@@ -52,11 +52,14 @@ jobs:
                echo "::set-output name=publicip::$publicip"
                
        - name: get variables
-         id: get_variables
+         id: get_variables_db
          run: |
               export dt_dev_db_id=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
               echo $dt_dev_db_id
               echo "::set-output name=dt_dev_db_id::$dt_dev_db_id"
+       - name: get variables
+         id: get_variables_mz
+         run: |
               export dt_mz_id=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
               echo $dt_mz_id
               echo "::set-output name=dt_mz_id::$dt_mz_id"
@@ -69,7 +72,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: documentation , Build ${{ github.run_number }}
-            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ env.DT_URL }}/#dashboard;id=${{ steps.get_variables.outputs.dt_dev_db_id }};gf=${{ steps.get_variables.outputs.dt_mz_id }};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
+            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ env.DT_URL }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_dev_db_id }};gf=${{ steps.get_variables_mz.outputs.dt_mz_id }};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
 
        - run: 'echo Created issue number ${{ steps.create-issue.outputs.number }}'
        
