--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -22,4 +22,4 @@ jobs:
          run: |
             echo ${{ env.DT_URL }} >/home/ec2-user/dt_url
             export test=$(cat /home/ec2-user/dt_url)
-            echo test
+            echo $test
