--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -21,5 +21,7 @@ jobs:
          id: get_variables
          run: |
             echo ${{ secrets.DT_URL }} >/home/ec2-user/dt_url
+       - name: get variables
+         run: |
             export test=$(cat /home/ec2-user/dt_url)
             echo $test
