--- a/.github/workflows/create_project.yml
+++ b/.github/workflows/create_project.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   create-project:
-    runs-on: ubuntu-latest
+    runs-on: dynatracedemo
     steps:
       - uses: actions/checkout@v2
       - run: echo "WEEK=$(date '+%B %d, %Y')" >> $GITHUB_ENV
@@ -21,8 +21,8 @@ jobs:
           name: "Simplenodeservice"
           description: Weekly sprint planning project
           columns: |
-            🚢 Shipped
-            ✅ Done
-            🧑‍💻 In progress
             📨 To do
+            🧑‍💻 In progress
+            ✅ Done
             🔍 Ready for Review
+            🚢 Shipped
