--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -29,39 +29,50 @@ jobs:
             output2: ${{ steps.set-version.outputs.build_version }}
             output3: ${{ steps.set_ip.outputs.publicip }}
             DT_STAGING_DB_ID: ${{ steps.get_variables_db.outputs.dt_staging_db_id }}
-            DT_MZ_ID: ${{ steps.get_variables_mz.outputs.dt_mz_id}}
-            GITHUB_PROJECT_URL: ${{ steps.get_variables_rest.outputs.gh_project_url }}
-            DT_URL: ${{ steps.get_variables_rest.outputs.dt_url }}
-            DOCKER_TAG: ${{ steps.get_variables_rest.outputs.docker_tag}}
+            DT_MZ_ID: ${{ steps.set_mgmt_zone.outputs.dt_mz_id}}
+            GITHUB_PROJECT_URL: ${{ steps.set_gh_url.outputs.gh_project_url }}
+            DT_URL: ${{ steps.set_dt_url.outputs.dt_url }}
+            DOCKER_TAG: ${{ steps.set_docker_tag.outputs.docker_tag}}
 
        steps:
-       - name: Set Release Version Variablea
+       - name: Set Public Ip variable
          id: set_ip
          run: |
                export publicip=$(curl http://checkip.amazonaws.com)               
                echo "::set-output name=publicip::$publicip"
 
 
-       - name: get variables
+       - name: Set Dashboard Id Variable
          id: get_variables_db
          run: |
               export dt_staging_db_id=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc"))| .[0].id')
               echo $dt_dev_db_id
               echo "::set-output name=dt_staging_db_id::$dt_staging_db_id"
     
-       - name: get variables
-         id: get_variables_mz
+       - name: Set Management zone Id Variable
+         id: set_mgmt_zone
          run: |
               export dt_mz_id=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
               echo $dt_mz_id
               echo "::set-output name=dt_mz_id::$dt_mz_id"
 
-       - name: get variables
-         id: get_variables_rest
+       - name: Set Github Url
+         id: set_gh_url
          run: |
-              echo "::set-output name=gh_project_url::$(cat /home/ec2-user/ghprojurl)"
-              echo "::set-output name=dt_url::$(cat /home/ec2-user/dturl)"
-              echo "::set-output name=docker_tag::$$(cat /home/ec2-user/dockertag)"
+              export gh_project_url=$(cat /home/ec2-user/ghprojurl)
+              echo "::set-output name=gh_project_url::$gh_project_url"
+              
+       - name: Set DT Url Variable
+         id: set_dt_url
+         run: |
+              export dt_url=$(cat /home/ec2-user/dturl)
+              echo "::set-output name=dt_url::$dt_url"
+    
+       - name: Set Docker Tag Variable
+         id: set_docker_tag
+         run: |
+              export dt_url=$(cat /home/ec2-user/dockertag)
+              echo "::set-output name=docker_tag::$dt_url"
                      
        - id: set-version
          run: |
@@ -77,7 +88,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: documentation, Build ${{ steps.set-version.outputs.build_version }}
-            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ steps.get_variables_rest.outputs.dt_url }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_staging_db_id }};gf=${{ steps.get_variables_mz.outputs.dt_mz_id}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
+            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ steps.set_dt_url.outputs.dt_url }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_staging_db_id }};gf=${{ steps.set_mgmt_zone.outputs.dt_mz_id}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
 
        - run: |
            echo Created issue number ${{ steps.create-issue.outputs.number }}
