--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,14 +11,9 @@ on:
   
 env:
   ## Sets environment variables
-  GITHUB_PROJECT_URL: "https://github.com/danatrace/pacmanservice/projects/1" 
+  GITHUB_PROJECT_URL: "https://github.com/danatrace/pacmanservice/projects/2" 
   DOCKER_REPO_URL: "https://hub.docker.com/repository/docker/danatrace/continuousimprovement"
-  #DT_URL: "https://ozw11698.live.dynatrace.com"
-  DT_MZ_ID: "2462787389709860009"
-  #DT_DEV_DB_ID: "76196020-e322-42c2-bc82-f7868171247e"
-  DT_STAGING_DB_ID: "e061a600-0a14-423f-a163-557d402b0bbe"
-  DT_PROD_DB_ID: "9d789d18-f896-4cb5-bb34-bb1db6300ee0"
-  DT_PRE_DB_ID: "478904d7-a456-4c49-9ad2-15da8ec7bb66"
+  DT_URL: "https://ozw11698.live.dynatrace.com"
   DOCKER_TAG: "danatrace/continuousimprovement"
   
   
@@ -40,11 +35,9 @@ jobs:
        outputs:
             output1: ${{ steps.create-issue.outputs.number }}
             output2: ${{ steps.set_ip.outputs.publicip }}
-            DT_URL: ${{ steps.get_variables.outputs.DT_URL }}
-            DT_DEV_DB_ID: ${{ steps.get_variables.outputs.DT_DEV_DB_ID }}
-            DT_STAGING_DB_ID: ${{ steps.get_variables.outputs.DT_STAGING_DB_ID }}
-            DT_PROD_DB_ID: ${{ steps.get_variables.outputs.DT_PROD_DB_ID }}
-            DT_PRE_DB_ID: ${{ steps.get_variables.outputs.DT_PRE_DB_ID}}
+            DT_DEV_DB_ID: ${{ steps.get_variables_db.outputs.dt_dev_db_id }}
+            DT_MZ_ID: ${{ steps.get_variables_mz.outputs.dt_mz_id}}
+
             
        steps:
  
@@ -56,23 +49,20 @@ jobs:
                export publicip=$(curl http://checkip.amazonaws.com)               
                echo "::set-output name=publicip::$publicip"
                
-       - name: get variables
-         id: get_variables
+       - name: Set Dashboard Id Variable
+         id: get_variables_db
          run: |
-              DT_URL=${{ secrets.DT_URL }}
-              DT_DEV_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc'))| .[0].id')"
-              DT_STAGING_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=staging;service=tnt-acer-svc'))| .[0].id')
-              DT_PROD_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=slo-evaluation;stage=prodg;service=tnt-acer-svc'))| .[0].id')
-              DT_PRE_DB_ID=$(curl -X GET ${{ secrets.DT_API_URL }} -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == 'KQG;project=deployment-gates;stage=production;service=tnt-acer-svc'))| .[0].id')
-              echo "::set-output name=DT_URL::$DT_URL"
-              echo "::set-output name=DT_DEV_DB_ID::$DT_DEV_DB_ID"
-              echo "::set-output name= DT_STAGING_DB_ID::$DT_STAGING_DB_ID"
-              echo "::set-output name=DT_PROD_DB_ID::$DT_PROD_DB_ID"
-              echo "::set-output name=DT_PRE_DB_ID::$DT_PRE_DB_ID"
+              export dt_dev_db_id=$(curl -X GET ${{ secrets.DT_API_URL }}/config/v1/dashboards -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "KQG;project=slo-evaluation;stage=dev;service=tnt-acer-svc"))| .[0].id')
+              echo $dt_dev_db_id
+              echo "::set-output name=dt_dev_db_id::$dt_dev_db_id"
+       - name: Set Mangement Zone Id Variable
+         id: get_variables_mz
+         run: |
+              export dt_mz_id=$(curl -L -X GET '${{ secrets.DT_API_URL }}/config/v1/managementZones' -H 'Authorization: Api-Token ${{ secrets.DT_API_TOKEN }}' | jq -r '.[] | map(select(.name == "Tenant: tnt-acer-svc")) | .[0].id')
+              echo $dt_mz_id
+              echo "::set-output name=dt_mz_id::$dt_mz_id"
         
        - name: Create Issue Action
-         env:
-            DT_URL: ${{ needs.Open-Tracking-Issue.outputs.DT_URL }} 
          id: create-issue
          uses: dacbd/create-issue-action@main
          with:
@@ -80,7 +70,7 @@ jobs:
             token: ${{secrets.WORKFLOW_TOKEN}}
             assignees: ${{github.actor}}
             labels: documentation , Build ${{ github.run_number }}
-            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ steps.get_variables.outputs.DT_URL }}/#dashboard;id=${{env.DT_DEV_DB_ID}};gf=${{env.DT_MZ_ID}};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
+            body: <a href="${{ github.SERVER_URL }}/${{ github.REPOSITORY }}/actions/runs/${{ github.RUN_ID }}"> Workflow Monitor </a> <br> <a href="${{ env.DT_URL }}/#dashboard;id=${{ steps.get_variables_db.outputs.dt_dev_db_id }};gf=${{ steps.get_variables_mz.outputs.dt_mz_id }};gtf=-10m"> Dynatrace Dev Evaluation Dashboard  </a> <br> <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/sequence"> Dynatrace Cloud automation  </a>
 
        - run: 'echo Created issue number ${{ steps.create-issue.outputs.number }}'
        
@@ -91,7 +81,16 @@ jobs:
             column-name: 🧑‍💻 In progress
             issue-number: ${{ steps.create-issue.outputs.number }}
 
-
+       - name: set_variable_files
+         run: |
+              rm -f /home/ec2-user/ghprojurl || true
+              rm -f /home/ec2-user/dockerrpurl || true
+              rm -f /home/ec2-user/dturl || true
+              rm -f /home/ec2-user/dockertag || true
+              echo ${{ env.GITHUB_PROJECT_URL }} >/home/ec2-user/ghprojurl
+              echo ${{ env.DOCKER_REPO_URL }} >/home/ec2-user/dockerrpurl
+              echo ${{ env.DT_URL }} >/home/ec2-user/dturl
+              echo ${{ env.DOCKER_TAG }} >/home/ec2-user/dockertag
 
   Build-Push-Container:
     runs-on: dynatracedemo
@@ -165,7 +164,7 @@ jobs:
         export KUBECONFIG=/etc/rancher/k3s/k3s.yaml
         echo "$(cat final_dev.yml)"
         kubectl replace -f final_dev.yml --force
-        kubectl wait --for=condition=available --timeout=120s --all deployments -A
+        kubectl wait --for=condition=available --timeout=120s --all deployments --namespace simplenodeservice-dev
         rm /home/ec2-user/variables || true
         rm /home/ec2-user/release || true
         rm /home/ec2-user/commitmsg || true
@@ -227,7 +226,7 @@ jobs:
       runs-on: dynatracedemo
       environment:
         name: dev
-        url: ${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_DEV_DB_ID}}
+        url: ${{env.DT_URL}}/#dashboard;gtf=${{ env.startdate }}+02:00%20to%20${{ env.enddate }}+02:00;gf=${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}};id=${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }}
       outputs:
               output1: ${{ steps.passvariable.outputs.EVALUATION_SCORE }}
               output2: ${{ steps.passvariable.outputs.keptnContext }}
@@ -242,8 +241,8 @@ jobs:
         env:
           ca_token: ${{ secrets.CA_TOKEN }} 
           EVALUATION_SCORE: $EVALUATION_SCORE
-          DT_URL: ${{ needs.Open-Tracking-Issue.outputs.DT_URL }} 
           DT_DEV_DB_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+          DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
         run: |
           trigger_evaluation()
           {
@@ -300,8 +299,8 @@ jobs:
        
       - name: Create comment
         env:
-            DT_URL: ${{ needs.Open-Tracking-Issue.outputs.DT_URL }} 
             DT_DEV_DB_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+            DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
         if: "${{ steps.passvariable.outputs.EVALUATION_SCORE >= 90 }}"
         uses: peter-evans/create-or-update-comment@v2
         with:
@@ -329,8 +328,8 @@ jobs:
             body: Slo Evaluation Failed <a href="${{secrets.DT_CA_URL}}/bridge/project/slo-evaluation/service/tnt-acer-svc/context/${{ needs.Dynatrace-Slo-Evaluation.outputs.output2 }}"> Cloud Automation </a> <br> <a href="${{env.DT_URL}}/#dashboard;gtf=${{ needs.Dynatrace-Slo-Evaluation.outputs.output3 }}+02:00%20to%20$${{ needs.Dynatrace-Slo-Evaluation.outputs.output4 }}+02:00;gf=${{env.DT_MZ_ID}};id=${{env.DT_DEV_DB_ID}}"> Dynatrace Slo Dashboard </a>
          env:
            EVALUATION_SCORE: ${{env.EVALUATION_SCORE}}
-           DT_URL: ${{ needs.Open-Tracking-Issue.outputs.DT_URL }} 
            DT_DEV_DB_IDL: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+           DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
            
        - name: Create or Update Project Card
          uses: peter-evans/create-or-update-project-card@v2
@@ -342,8 +341,8 @@ jobs:
            
        - name: Create comment
          env:
-            DT_URL: ${{ needs.Open-Tracking-Issue.outputs.DT_URL }} 
             DT_DEV_DB_IDL: ${{ needs.Open-Tracking-Issue.outputs.DT_DEV_DB_ID }} 
+            DT_MZ_ID: ${{ needs.Open-Tracking-Issue.outputs.DT_MZ_ID}} 
          uses: peter-evans/create-or-update-comment@v2
          with:
             issue-number: ${{ needs.Open-Tracking-Issue.outputs.output1 }}
